Update and repositioning of files.

--- a/CSC543FinalProject/CSC543FinalProject.csproj
+++ b/CSC543FinalProject/CSC543FinalProject.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="CopyFilesToServer.ps1" />
     <None Remove="CSC 543 - Spring 2021 - Final Project - Bob Elward.pptx" />
+    <None Remove="CSC543FinalProject_MapReduce.vsdx" />
     <None Remove="world192.txt" />
   </ItemGroup>
 
